spec/unit/compile_errors/fixtures/08_duplicate_field_tag.cr
# expect: is already declared
require "../../../../src/prostore"

class M < Prostore::Model
  field 1, :id, Int64, primary: true, auto_increment: true
  field 1, :other, String
end
